# TraitRuntime

./: CMakeLists.txt  HashStr.c  HashStr.h  Log.c  Log.h  TraitRuntime.c  TraitRuntime.h  hash_str.c  hash_str.h  hashed_str.c  hashed_str.h  main.c  trait_runtime.c  trait_runtime.h
AppTest/: main.c
AppTest/traits/: Describe.h  Move2i.h  Move3f.h
AppTest/types/: Point.c  Point.h  Vector3f.c  Vector3f.h
TraitRuntime/: TraitRuntime.c  TraitRuntime.h
TraitRuntime/common/: Debug.h  MacroUtils.h
common/: Debug.c  ErrorHandling.h  MacroUtils.h
src/: Config.h  TraitRuntime.c  TraitRuntime.h
src/TraitRuntime/: BuiltIn.c  BuiltIn.h  Class.c  Class.h  Object.c  Object.h  Runtime.c  Runtime.h  Trait.c  Trait.h  Types.h
src/TraitRuntime/Commons/: AlertDialog.c  AlertDialog.h  Callstack.c  Callstack.h  Debug.c  Debug.h  ErrorHandling.c  ErrorHandling.h  Flags.h  Log.c  Log.h
src/TraitRuntime/Container/: HashTable.h
src/TraitRuntime/Memory/: Arena.c  Arena.h  MaxAlign.h  MemPool.c  MemPool.h
src/TraitRuntime/String/: HashStr.c  HashStr.h
test/: main.c
test/classes/: Point.c  Point.h  Vector3f.c  Vector3f.h
test/traits/: Describe.c  Describe.h  Move2i.c  Move2i.h  Move3f.c  Move3f.h
traits/: Describe.c  Describe.h  Format.c  Format.h  Move2i.c  Move2i.h  Move3f.c  Move3f.h
types/: Point.c  Point.h  Vector3f.c  Vector3f.h
